# comfyui-identity-forge

./: README.md  __init__.py  pyproject.toml  user_options.example.json
.github/workflows/: publish_action.yml
data/: constraints.py  cosplayers.py  creatures.py  fields.py  templates.py  user_options.py
docs/: architecture.md  cosplayer-notes.md  creature-notes.md  onebuttonprompt-findings.md  usage.md  worklog-0.26.0.md  worklog-0.27.0.md  worklog-0.28.0.md
docs/worklog/: 0.35.0.md
js/: identity_forge.js  identity_forge_creature.js  identity_forge_vault.js
nodes/: identity_forge.py  identity_forge_archetype.py  identity_forge_cosplayer.py  identity_forge_creature.py  identity_forge_modifier.py  identity_forge_vault_load.py  identity_forge_vault_save.py
tests/: preview_cosplayer.py  test_creature.py  test_engine.py  test_vault.py  validate_data.py
