[project]
name = "comfyui-identity-forge"
version = "0.13.2"
description = "A 70+ field character randomizer node pack for ComfyUI with a constraint engine, themed archetype presets, fictional-character cosplay presets (with optional signature props), per-element style modifiers, a studio/solid backdrop mode, a save/load character vault, and dual prose/JSON output."
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
keywords = ["comfyui", "character", "prompt", "randomizer", "constraint"]
dependencies = []

[[project.authors]]
name = "EnragedAntelope"

[project.urls]
Repository = "https://github.com/EnragedAntelope/comfyui-identity-forge"
"Bug Tracker" = "https://github.com/EnragedAntelope/comfyui-identity-forge/issues"

[tool.comfy]
PublisherId = "enragedantelope"
DisplayName = "Identity Forge"
requires-comfyui = ">=0.25.0"
