[project]
name = "comfyui-identity-forge"
version = "0.16.0"
description = "A character randomizer node pack for ComfyUI with a constraint engine, themed archetype presets, a large fictional-character cosplay library (with optional signature props), a creature/monster/alien form layer with slot-by-slot hybridization, per-element style modifiers, a studio/solid backdrop mode, a save/load character vault, and dual prose/JSON output."
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
keywords = ["comfyui", "character", "prompt", "randomizer", "constraint", "creature", "monster", "alien", "anthro"]
dependencies = []

[[project.authors]]
name = "EnragedAntelope"

[project.urls]
Repository = "https://github.com/EnragedAntelope/comfyui-identity-forge"
"Bug Tracker" = "https://github.com/EnragedAntelope/comfyui-identity-forge/issues"

[tool.comfy]
PublisherId = "enragedantelope"
DisplayName = "Identity Forge"
requires-comfyui = ">=0.25.0"
